<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/project_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Humidity Text -->
    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/humidity_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_title" />

    <!-- Humidity Progress -->
    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/humidityProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:arc_bottom_text="Humidity"
        app:arc_progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_value" />

    <!-- pH Text -->
    <TextView
        android:id="@+id/ph_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ph_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/humidity_value"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_title" />

    <!-- pH Progress -->
    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/phProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:arc_bottom_text="pH"
        app:arc_max="14"
        app:arc_progress="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ph_Value" />

    <!-- Temperature Text -->
    <TextView
        android:id="@+id/temperature_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/temperature_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidityProgressBar" />

    <!-- Temperature Progress -->
    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/temperatureProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:arc_progress="25"
        app:arc_bottom_text="Temperature"
        app:arc_max="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_Value" />

    <!-- Relay Low pH Status -->
    <TextView
        android:id="@+id/relay_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Relay status will appear here"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureProgressBar" />

    <!-- Water Sensor Value -->
    <TextView
        android:id="@+id/water_sensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/water_sensor_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relay_status" />

    <!-- Water Pump Status -->
    <TextView
        android:id="@+id/water_pump_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/water_pump_status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/water_sensor_value" />

    <!-- Button to Toggle Relay -->
    <Button
        android:id="@+id/toggleWaterFlowRelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Water Flow Motor"
        android:layout_marginTop="20dp"
        android:textOff="Relay OFF"
        android:textOn="Relay ON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/water_pump_status" />

    <!-- Line Chart for pH data -->
    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleWaterFlowRelay"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
